<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Windoo Android Library</string>

    <string name="api_token" translatable="false">replace_this_with_your_personal_token</string>

    <string name="title_activity_windoo_api_demo">Air Force Tree Windoo</string>

    <string name="calibrating_title">Calibration</string>
    <string name="calibrating_message">Veuillez patienter ...</string>

    <string name="volume_up_title">Windoo</string>
    <string name="volume_up_message">SVP enclencher le volume au maximum</string>

    <string name="plug_title">Windoo</string>
    <string name="plug_message">SVP insérez la clé Windoo dans la prise jack de votre smartphone</string>

    <string name="na">N/A</string>

    <string name="live_save_measures_send_title">Chargement</string>
    <string name="live_save_measures_send_message">Veuillez patienter...</string>

    <string name="loading_error">The server is unreachable. Please try again later ...</string>
    <string name="measure_sent">Your measure has been published on the Windoo website</string>

    <string name="lastStatus">Dernier relevé</string>
    <string name="windSpeed">Vitesse du vent (km/h)</string>
    <string name="temperature">Température (°C)</string>
    <string name="humidity">Humidité (%)</string>
    <string name="pressure">Pression (hPa)</string>

</resources>
