<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.sykwatch.windooapidemo.WindooApiDemo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Windoo API"
        android:layout_gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Large"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        style="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastStatus"
            style="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            style="@android:style/TextAppearance.DeviceDefault.Small" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windSpeed"
            style="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            style="@android:style/TextAppearance.DeviceDefault.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            style="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            style="@android:style/TextAppearance.DeviceDefault.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            style="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            style="@android:style/TextAppearance.DeviceDefault.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            style="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="N/A"
            style="@android:style/TextAppearance.DeviceDefault.Small" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show live measurement"
        android:id="@+id/showLiveMeasurement"
        android:layout_gravity="center_horizontal" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:id="@+id/btn_test"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
